fixed alignment issues

--- a/styles.css
+++ b/styles.css
@@ -51,8 +51,8 @@ nav ul li {
 .main_content {
   background-image: url(assets/main.jpg);
   background-repeat: no-repeat;
-  background-size: 1457px 940px;
-  width: 1457px;
+  background-size: 100vw 940px;
+  width: 100%;
   height: 940px;
   text-align: center;
   color: #fff;
@@ -78,36 +78,41 @@ nav ul li {
 
 .main_content_b {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
-  height: 200px;
+  grid-template-columns: 25vw 25vw 25vw 25vw;
+  height: auto px;
   margin: 2px;
+}
+
+.thumbnail {
+  height: auto;
+  width: 25vw;
 }
 
 footer {
   width: 100vw;
   background-color: #fff;
   height: 70px;
-  font-size: 13px;
+  font-size: 11px;
 }
 
 .footer_left {
   float: left;
   margin-top: 10px;
   margin-bottom: 10px;
-  margin-left: 100px;
+  margin-left: 60px;
 }
 
 .footer_right {
   float: right;
   margin-top: 10px;
   margin-bottom: 10px;
-  margin-right: 100px;
+  margin-right: 60px;
 }
 
 .footer_extra {
   clear: left;
   text-align: left;
-  margin-left: 100px;
+  margin-left: 60px;
 }
 
 footer a {
